# bookscrape

./: README.md  core.html  index.html  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
bookscrape/: _modidx.py
nbs/: index.ipynb  nbdev.yml
