[tool.poetry]
name = "bookscrape"
version = "0.1.0"
description = ""
authors = ["Tiago Henrique <tiagohs.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Scrapy = "^2.11.0"
jupyter = "^1.0.0"

[tool.poetry.group.dev.dependencies]
nbdev = "^2.3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
